FM-002/Add loader and increment setTimeout times

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 <body>
 
+  <div id="loader" class="loader">
+    <img src="img/loader.gif" alt="loader">
+  </div>
+
   <div class="container">
     <div class="main-content">
 
